--- a/jtemplate-web/src/main/webapp/pages/index.xhtml
+++ b/jtemplate-web/src/main/webapp/pages/index.xhtml
@@ -10,6 +10,8 @@
 	<h:form>
 		<table>
 			<tr>
+                            
+                            <!-- Test Comment -->
 				<td><h:outputLabel for="id" value="Id : " /></td>
 				<td><p:inputText id="id" value="#{entityBBean.id}"
 						disabled="true">
