--- a/jtemplate-web/src/main/webapp/pages/index.xhtml
+++ b/jtemplate-web/src/main/webapp/pages/index.xhtml
@@ -11,7 +11,7 @@
 		<table>
 			<tr>
                             
-                            <!-- Test Comment -->
+                            <!-- Test Comment number 2 -->
 				<td><h:outputLabel for="id" value="Id : " /></td>
 				<td><p:inputText id="id" value="#{entityBBean.id}"
 						disabled="true">
