--- a/jtemplate-web/src/main/webapp/pages/index.xhtml
+++ b/jtemplate-web/src/main/webapp/pages/index.xhtml
@@ -12,6 +12,7 @@
 			<tr>
                             
                             <!-- Test Comment number 2 -->
+                            <!<!-- Test Comment number 3  -->
 				<td><h:outputLabel for="id" value="Id : " /></td>
 				<td><p:inputText id="id" value="#{entityBBean.id}"
 						disabled="true">
